<resources>
    <string name="app_name" translatable="false">Wijnhuis Ronny</string>
    <string name="sloganText">Waar passie, wijn en kwaliteit samenkomen...</string>
    <string name="witte_wijnen_category">Witte wijnen</string>
    <string name="rode_wijnen_category">Rode wijnen</string>
    <string name="rose_wijn_category">Rose wijnen</string>
    <string name="bubbles_category">Bubbels</string>
    <string name="gin_category">Gin</string>
    <string name="porto_category">Porto</string>
    <string name="overig_category">Overig</string>
    <string name="overige_category">Overige</string>
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="straatEnNummer">Straat + nummer</string>
    <string name="woonplaats">Woonplaats</string>
    <string name="postcode">Postcode</string>
    <string name="gsmNummer">GSM-nummer</string>
    <string name="email">E-mailadres</string>
    <string name="volledigeNaam">Volledige naam\n</string>
    <string name="voornaamEnAchternaam">Volledige naam</string>
    <string name="degNaam">Winterdegustatie</string>
    <string name="degPrijs">€15</string>
    <string name="degDatum">15 - 17 Januari</string>
    <string name="Inschrijven">Inschrijven!</string>
    <string name="voegToe">Voeg toe</string>
    <string name="euroTeken">€</string>
    <string name="aantal">Aantal:</string>
    <string name="bestellingPlaatsen">Bestelling plaatsen!</string>
    <string name="totalValue">Total: €0.00</string>
    <string name="wijnhuisRonnySlogan">\"Waar passie, wijn en kwaliteit samenkomen\"</string>
    <string name="overOns">Over ons...</string>
    <string name="overOnsText">Wijnhuis Ronny is gelegen in het Limburgse Koersel-Beringen, nabij de bossen van het Koersels kapelleke. In de gezellige wijnshop/wijnbar kan je terecht voor Italiaanse en Oostenrijkse kwaliteitswijnen en ander lekkers. Daar wordt het drinken van wijn een verhaal, een avontuur, een reis en een stukje natuur. Kortom leven in een glas.\nSalute – Prost!</string>
    <string name="startpagina">Startpagina</string>
    <string name="overRonny">Het verhaal van Ronny Heyligen</string>
    <string name="overRonnyText">Tijdens zijn 4-jarige opleiding tot \"wijnhandelaar-sommelier\" startte hij in 2018 met Wijnhuis Ronny. Ronny behaalde vervolgens in 2019 zijn diploma \"wijnhandelaar-sommelier\". Met trots oefent hij zijn passie voor wijn nu reeds 5 jaar uit in Wijnhuis Ronny.</string>
    <string name="bestellingAfronden">Bestelling afronden!</string>
</resources>