<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".HomepageFragment">

    <data>
        <variable
            name="homepageFragmentViewModel"
            type="com.example.appwijnhuisronny.HomepageFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sloganTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_extralight"
                android:text="@string/wijnhuisRonnySlogan"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/photoCardView"
                android:layout_width="0dp"
                android:layout_height="228dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="3dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sloganTextView">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/homepagephoto" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/overOnsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_extralight"
                android:text="@string/overOns"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/sloganTextView"
                app:layout_constraintTop_toBottomOf="@+id/photoCardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/overOnsCardView"
                android:layout_width="159dp"
                android:layout_height="300dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overOnsTextView">

                <ImageView
                    android:id="@+id/overOnsImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/homepagephoto" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/overOnsTextView2"
                android:layout_width="171dp"
                android:layout_height="296dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nunito_sans_extralight"
                android:text="@string/overOnsText"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/overOnsCardView"
                app:layout_constraintTop_toTopOf="@+id/overOnsCardView" />

            <TextView
                android:id="@+id/overOnsTextView3"
                android:layout_width="323dp"
                android:layout_height="31dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_extralight"
                android:text="@string/overRonny"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/overOnsTextView"
                app:layout_constraintTop_toBottomOf="@+id/overOnsTextView2" />

            <TextView
                android:id="@+id/overOnsTextView4"
                android:layout_width="332dp"
                android:layout_height="124dp"
                android:fontFamily="@font/nunito_sans_extralight"
                android:text="@string/overRonnyText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/overOnsTextView3"
                app:layout_constraintTop_toBottomOf="@+id/overOnsTextView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
